# NeuroSTORM

./: .gitignore  Dockerfile  README.md  hello.py  pyproject.toml
scripts/: run_demo.sh
src/neurostorm/: demo.py  main.py
src/neurostorm/datasets/: brain_extraction.sh  compute_stats_and_mask.py  fmri_datasets.py  generate_roi_data_from_nii.py  preprocessing_volume.py
src/neurostorm/models/: lightning_model.py  load_model.py  neurostorm.py  utils.py
src/neurostorm/models/heads/: cls_head.py  emb_head.py  reg_head.py
src/neurostorm/utils/: data_module.py  neptune_utils.py
